<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:animateLayoutChanges="true"
    tools:context=".ui.SettingsActivity">

    <LinearLayout
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="48dp">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />

        <LinearLayout
            android:animateLayoutChanges="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:importantForAccessibility="no"
                    android:scaleX="1.8"
                    android:scaleY="1.8"
                    app:srcCompat="@mipmap/ic_launcher_foreground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/app_name"
                    android:textColor="@color/accent"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="28dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/transparent"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/generalTab"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/tab_bg_sel"
                            android:text="@string/tab_general"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/advancedTab"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/tab_bg"
                            android:text="@string/tab_advanced"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/generalSettingsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/websocket_server_url"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <EditText
                        android:id="@+id/wsServerUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:background="@drawable/field_bg"
                        android:drawableStart="@drawable/ic_cloud"
                        android:drawablePadding="16dp"
                        android:drawableTint="#777"
                        android:hint="@string/websocket_server_url_hint"
                        android:inputType="textPassword"
                        android:paddingVertical="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="56dp"
                        android:requiresFadingEdge="horizontal"
                        android:textSize="16sp"
                        tools:ignore="TextFields" />

                    <ImageView
                        android:id="@+id/toggleWsServerUrlVisibility"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="16dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_visibility"
                        app:tint="#757575" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/display_secret_key"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <EditText
                        android:id="@+id/displaySecretKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:background="@drawable/field_bg"
                        android:drawableStart="@drawable/ic_key"
                        android:drawablePadding="16dp"
                        android:drawableTint="#777"
                        android:hint="@string/display_secret_key_hint"
                        android:inputType="textPassword"
                        android:paddingVertical="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="56dp"
                        android:requiresFadingEdge="horizontal"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/toggleDisplaySecretKeyVisibility"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="16dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_visibility"
                        app:tint="#757575" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/log_server_url"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <EditText
                        android:id="@+id/logServerUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:background="@drawable/field_bg"
                        android:drawableStart="@drawable/ic_log"
                        android:drawablePadding="16dp"
                        android:drawableTint="#777"
                        android:hint="@string/log_server_url_hint"
                        android:inputType="textPassword"
                        android:paddingVertical="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="56dp"
                        android:requiresFadingEdge="horizontal"
                        android:textSize="16sp"
                        tools:ignore="TextFields" />

                    <ImageView
                        android:id="@+id/toggleLogServerUrlVisibility"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="16dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_visibility"
                        app:tint="#757575" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/display_token"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <EditText
                        android:id="@+id/displayToken"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:background="@drawable/field_bg"
                        android:drawableStart="@drawable/ic_token"
                        android:drawablePadding="16dp"
                        android:drawableTint="#777"
                        android:hint="@string/display_token_hint"
                        android:inputType="textPassword"
                        android:paddingVertical="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="56dp"
                        android:requiresFadingEdge="horizontal"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/toggleDisplayTokenVisibility"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="16dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_visibility"
                        app:tint="#757575" />

                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/advancedSettingsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retry_interval_minutes"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/retryInterval"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/field_bg"
                    android:drawableStart="@drawable/ic_time"
                    android:drawablePadding="16dp"
                    android:drawableTint="#777"
                    android:hint="@string/retry_interval_hint"
                    android:inputType="number"
                    android:padding="16dp"
                    android:textSize="16sp"
                    tools:ignore="Autofill" />

                <LinearLayout
                    android:id="@+id/tickerBackgroundColorContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ticker_background_color"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/transparent"
                        app:cardCornerRadius="12dp"
                        app:strokeColor="#777">

                        <com.skydoves.colorpickerview.AlphaTileView
                            android:id="@+id/tickerBackgroundAlphaTileView"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:background="@color/white"
                            android:orientation="horizontal"
                            app:tileSize="20" />

                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tickerTextColorContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ticker_text_color"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/transparent"
                        app:cardCornerRadius="12dp"
                        app:strokeColor="#777">

                        <com.skydoves.colorpickerview.AlphaTileView
                            android:id="@+id/tickerTextAlphaTileView"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:background="@color/white"
                            android:orientation="horizontal"
                            app:tileSize="20" />

                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/showErrorAsToastContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_error_as_toast"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/showErrorAsToast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp" />

                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="#111"
                android:padding="16dp"
                android:text="@string/btn_continue"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="12dp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>